# new_detection

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_debug.cpp  main_record.cpp
include/: AngleSolve.h  AngleSolve.hpp  ArmorDetector.hpp  ArmorTracker.h  CRC_Check.h  DNN_detect.h  KalPredict.h  KalmanFilter.h  RobotState.h  Singer.h  SpinTracker.h  Spin_Tracker.h  Thread.h  armor_detection.h  armor_detection.hpp  armor_prediction.h  armor_track.h  camera.h  crc.h  energy_predict.h  energy_state.h  gimbal_control.h  number_DNN.h  protocol.h  robot_state.h  robot_status.h  serial_device.h  serial_main.h  serialport.h  singer_prediction.h  thread.h
include/camera/: CameraApi.h  CameraDefine.h  camera.h  camera_api.h  camera_define.h  camera_status.h
model/: 2022_10_21_hj_num_4.onnx  2023_1_17_hj_num_1.onnx  2023_1_3_hj_num_3.onnx  2023_1_5_hj_num_8.onnx  2023_1_6_hj_num_7.onnx  2023_1_7_hj_num_2.onnx  2023_1_8_hj_num_5.onnx  2023_2_16_hj_num_1.onnx  2023_2_16_hj_num_1_fp16.onnx  2023_2_1_hj_num_2.onnx  2023_2_26_hj_num_2.onnx  2023_2_26_hj_num_2_fp16.onnx  2023_2_28_hj_num_1.onnx  2023_3_16_hj_num_1.onnx  2023_3_26_hj_num_1.onnx  2023_3_26_hj_num_1_dyn.onnx  2023_3_3_hj_num_1.onnx  2023_4_20_hj_num_1.onnx  2023_4_21_hj_num_1.onnx  2023_4_9_hj_num_1.onnx
module/: 1_1.0_16_3.onnx  1_2.0_16_7.onnx  2022_10_11_hj_num.onnx  2022_10_12_hj_num.onnx  2022_10_12_hj_num_2.onnx  2022_10_12_hj_num_3.onnx  2022_10_13_hj_num.onnx  2022_10_20_hj_num.onnx  2022_10_20_hj_num_1.onnx  2022_10_21_hj_num.onnx  2022_10_21_hj_num_1.onnx  2022_10_21_hj_num_2.onnx  2022_10_21_hj_num_3.onnx  model.onnx
my_module/: 1_1.0_16_4.onnx  best_80_1_16_954.onnx
other/: auto.sh  auto.txt  buff_data.yaml  control_data.yaml  detect_data.yaml  dnn_data.yaml  predict_data.yaml  track_data.yaml
other/port/: install.sh  vision_port.rules
other/port/udev/: robomaster_usb.rules  setup.sh
other/port/udev/dbus-udev/: dbus.rules  setup.sh
src/: .KAL.cpp.swp  AngleSolve.cpp  ArmorDetector.cpp  ArmorTracker.cpp  CRC_Check.cpp  DNN_detect.cpp  KalPredict.cpp  Singer.cpp  SpinTracker.cpp  Spin_Tracker.cpp  Thread.cpp  armor_detection.cpp  armor_prediction.cpp  armor_track.cpp  camera.cpp  crc.cpp  energy_get.cpp  energy_predict.cpp  energy_state.cpp  gimbal_control.cpp  number_DNN.cpp  number_dnn.cpp  robot_status.cpp  serial_device.cpp  serial_main.cpp  serialport.cpp  singer_prediction.cpp  thread.cpp
src/module/: number_detect-opt.param
tools/: MVCAMSDK.lib  MVCAMSDK_X64.lib
video/: 1801451959.txt  1801827345.txt
